[tool.poetry]
authors = ["Matthias Lübken <matthias.luebken@gmail.com>"]
description = ""
license = "ASL-2"
name = "bundestag-mcp"
readme = "readme.md"
version = "0.1.0"
package-mode = false

[tool.poetry.dependencies]
httpx = "^0.28.1"
mcp = {extras = ["cli"], version = "^1.3.0"}
python = "~3.13"
click = "^8.1.8"
fastmcp = "^0.4.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
