[project]
authors = [
  {name = "Matthias Lübken", email = "matthias.luebken@gmail.com"},
]
dependencies = [
  "httpx<1.0.0,>=0.28.1",
  "mcp[cli]>=1.3.0,<2.0.0",
  "click<9.0.0,>=8.1.8",
  "fastapi>=0.115.11",
]
description = ""
license = {text = "ASL-2"}
name = "bundestag-mcp"
package-mode = false
readme = "README.md"
requires-python = "~=3.13"
version = "0.1.0"

[tool.pdm.build]
includes = []

[build-system]
build-backend = "pdm.backend"
requires = ["pdm-backend"]
